project is completed now and bug is fixed successfully

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DATABASE_HOST=localhost
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE=mydb
+JWT_SECRET=DKFOEKREOIR93I04340OOIERI03IR0I0330OKFOEKO90I02343049
+JWT_EXPIRES=90d
+COOKIE_EXPIRES=90
